Fixed issues #18 (display correct customization options for Custom, Property graph) and #19 (release/ontograph.zip file does not contain VOWL images in graphmlimages)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -89,7 +89,7 @@
 		        	<select class="form-control" id="graphType">
 						<option>Class Definitions</option>
 						<option>Individuals, Types and Properties</option>
-						<option>Annotation, Datatype and Object Property Definitions</option>
+						<option>Property Definitions</option>
 						<option>Both Class and Property Definitions</option>
 					</select>
 				</div>
